--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,17 @@
 body {
+	font-family:Arial, Helvetica, sans-serif;
 	text-align: center;
 	color: black;
+	font-size: 25px;
 }
 a {
 	color: blue;
 	text-decoration: none;
+}
+nav {
+	display: block;
+	text-align: left;
+}
+nav a:hover {
+	text-decoration: underline;
 }
