--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -239,7 +239,38 @@ footer {
 }
 
 /* Rivers Page Styles */
+.river-title {
+    margin-top: 25px;
+}
+main.rivers-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.rivers-card-1, .rivers-card-2, .rivers-card-3 {
+    margin: 50px 0;
+}
+.rivers-card-1 {
+    grid-column: 2/4;
+    grid-row: 2/5;
+}
+.rivers-card-2 {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rivers-card-3 {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
 
+.rivers-card-img {
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.rivers-card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
 /* Media Query */ 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
